--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type= "text/css" href="C:\Coding_Projects\CodeAcademy\index.css">
+    <link rel="stylesheet" type= "text/css" href="index.css">
     <title>Code Project: CSS Display Property</title>
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
